# serde-zod

./: .gitignore  Cargo.toml  readme.md
app/: Cargo.toml  package.json  test.ts  types.ts
app/src/: main.rs  real.rs
example/: Cargo.toml  package-lock.json  package.json  test.ts  types.ts
example/src/: main.rs  real.rs
serde-zod/: Cargo.toml
serde-zod/src/: bin.rs  get_serde_rename.rs  indent.rs  lib.rs  printer.rs  serde_case.rs  types.rs  zod.rs
serde-zod/src/types/: field.rs  import.rs  mod.rs  object.rs  tagged_union.rs  ty.rs  union.rs  zod_enum.rs
src/: bin.rs  lib.rs
